--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -225,8 +225,7 @@
           <clipPath id="a"><path fill="#fff" d="M0 0h982v239H0z" /></clipPath>
         </defs>
       </svg>
-      <h1 class="title-class">welcome, {{ title }}</h1>
-      <p>Congratulations! Your app is running. 🎉</p>
+      <h1 class="title-class">Welcome to {{ title }} tutorials</h1>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
