UI changes made

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -322,6 +322,7 @@
     </div>
   </div>
 </main>
+<button type="button" (click)="moveToUrl()">Click me to upload file to Cloud SQL!</button>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
